--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>lutece-global-pom</artifactId>
 		<groupId>fr.paris.lutece.tools</groupId>
-		<version>8.0.0-SNAPSHOT</version>
+		<version>8.0.0</version>
 	</parent>
 	<groupId>fr.paris.lutece.plugins</groupId>
 	<artifactId>library-priority-extension</artifactId>
@@ -30,7 +30,11 @@
 			</snapshots>
 		</repository>
 	</repositories>
-
+ <scm>
+    <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-priority-extension.git</connection>
+    <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-priority-extension.git</developerConnection>
+    <url>https://github.com/lutece-platform/lutece-tech-library-priority-extension.git</url>
+  </scm>
 	<dependencies>
 		
 	</dependencies>
