--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>lutece-global-pom</artifactId>
@@ -9,7 +7,7 @@
 	</parent>
 	<groupId>fr.paris.lutece.plugins</groupId>
 	<artifactId>library-priority-extension</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Lutece priority-extension library</name>
 
 	<repositories>
@@ -34,6 +32,7 @@
     <connection>scm:git:https://github.com/lutece-platform/lutece-tech-library-priority-extension.git</connection>
     <developerConnection>scm:git:https://github.com/lutece-platform/lutece-tech-library-priority-extension.git</developerConnection>
     <url>https://github.com/lutece-platform/lutece-tech-library-priority-extension.git</url>
+    <tag>library-priority-extension-1.0.0</tag>
   </scm>
 	<dependencies>
 		
